--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">UNCHILOG</string>
+
+    <!-- Dev  -->
+    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
+    <!-- Prd -->
+
+    <!-- Dev -->
+    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
+    <!-- Prd -->
+    <!-- Dev -->
+    <string name="admob_Interstitial_id">ca-app-pub-3940256099942544/5224354917</string>
+    <!-- Prd -->
 </resources>
