登録モードの変更処理の実装

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="dialog_msg_delete_poop">うんちの記録を本当に削除しますか？</string>
     <string name="dialog_msg_failed_calendar_out_range">カレンダーの表示範囲外です。</string>
     <string name="dialog_msg_update_init_week">週始まりを「%1$s」に変更しました。</string>
+    <string name="dialog_msg_update_entry_mode">「%1$s」モードに変更しました。</string>
 
     <!-- App Lock Dialog -->
     <string name="dialog_save_password">パスワードを設定してアプリをロックしました。</string>
@@ -32,7 +33,8 @@
 
     <!-- Setting -->
     <string name="setting_app_calendar_init_week">週始まり</string>
-    
+
+    <string name="setting_app_entry_mode">うんちの登録モードを切り替え</string>
     <string name="setting_app_lock">アプリをロックする</string>
     <string name="setting_app_lock_desc">・アプリにパスワードを設定してロックをかけることができます。</string>
 
